chore: Add mac and data files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 ## Python boilerplate
+
+# Data
+data
+data-raw
+results
+
+# Mac
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
