Finish App; update README; fix major  issues reported by Pylint (#8)
* Initial commit

* chore: Setup project specific details

* Model calibration with Platt scaling and metrics of CE

* Model calibration: store uncalibrated proba

* Model calibration: refine binary case in SVM

* Model calibration: calibrate predictions; add NB

* Model calib: add using TS

* Model calib: refactor

* Model calib: implement TS with nn.module and adam

* model calib: add VS

* model calib: set TS as default

* Model calib: add MS, VS

* reafacor; add HMC

* refactor

* add plot func

* refactor

* refactor

* debug HMC

* leave out result files

* add lbfgs optim for calibration

* debug HMC 1: inference inside model

* debug HMC 2: override predict in NeuralNetClassifier

* debug HMC 3: override fit_loop in NeuralNetClassifier

* fix HMC: no train/val inside skorch. Happy~

* overhaul 0

* overhaul 1

* overhaul 2

* update config

* add TODO in config

* Ready for first experiments

* fix bug: wrong  inner_groups

* fix bug; update requirements.txt

* add XGBoost; RSCV iter 15

* add skorch to reqirements.txt; change loading func for PCAs setting

* Debug for GPU

* debug GPU for neuralNet

* Finish debug for neuralNet on GPU

* inner metric: f1 score

* add cond.sigmoid: debug

* cond.sigmoid: debug 1

* CS: encode y in loss func

* debug for neuralNet on PCA_

* debug for neuralNet on PCA_

* C-HMCNN: encode y in loss func

* Finish debug on NN over pca_

* debug to False

* adjust dropout rate and activaton func

* debug to false; disable earlystopping

* add deselect models args

* debug

* debug

* Finsih debug, add deselect model args

* RSCV: n_iter to 20

* add pool for multiprocess

* Finish debug model_type

* narrow down hyper parameters in NN

* minor fix

* fix incorrect task_name

* fix bug in cont. sigmoid

* save results as pickle

* add json_to_p

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 anndata
 matplotlib
 numpy
+networkx
 pandas
 pre-commit
+quadprog
 scanpy
 scipy
 scikit-learn
+skorch
+torch
 wget
+gdown
 
+hiclass
+qpsolvers
